@@ -17,6 +17,7 @@ Thierry Vignaud  tvignaud at mandrakesoft dot com
 James Curbo      hannibal at adtrw dot org
 Bjarne Steinsbø  bosteins at broadpark dot no
 Jacek Konieczny  jajcus at bnet dot pl
+Albert Chin      china at thewrittenword dot com
 
 several important bits of gtk2-perl were heavily inspired by pygtk, gtk-perl,
 and a good read-through of the gtk+ source code, so credit goes to those guys
